# shrew

./: .clang-format  .gitignore  CMakeLists.txt
include/cweb/: CMakeLists.txt  coin.h  collisionlayer.h  decorationlayer.h  foregroundlayer.h  shrew.h
include/cweb/character/: player.h
include/cweb/collision/: collider.h  pixel_collider.h  static_collider_map.h
include/cweb/level/: object.h
include/cweb/sprite/: sprite.h
src/: CMakeLists.txt  main.c
src/character/: CMakeLists.txt  player.c
src/collision/: CMakeLists.txt  pixel_collider.c  static_collider_map.c
src/sprite/: CMakeLists.txt  sprite.c
tools/embed/: main.go
